# gambigames

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  gambi  main.c  main.c~  maisum
src/: main.c  main.c~
